--- a/views/avalon.jade
+++ b/views/avalon.jade
@@ -34,6 +34,8 @@ h1= title
     button(onclick="LeaveRoom()") Quit Game
 #display
 #dialog(style="display:none")
+    p Enter a display name or leave blank to be assigned one
+    input(type="text",id="displayname")
     p Select a room or enter a room name to create a new one!
     input(type="text",id="roomname")
     select(id="roomoptions")
@@ -45,4 +47,5 @@ h1= title
     #chat
     input(type="text",id="chatbox")
     button(type="submit",onclick="SendChat()") Send
+#overlay
 #playground
